removed css that was hiding <li> items, condensed laser cutter to one page, fixed all broken images, made logo 4.0 section

--- a/docs/css/rtfm.css
+++ b/docs/css/rtfm.css
@@ -1,11 +1,5 @@
-.navbar-nav li {
-    display: none;
-}
-.navbar-nav li + li {
-    display: list-item;
-}
 .navbar-brand {
-    background:url('../images/logos/Logo-Poker-Chip-small.png') no-repeat;
+    background:url('../images/logos/Logo-Poker-Chip-small.v3.png') no-repeat;
     background-size: auto 100%;
     width:70px;
     height:70%;
